exports[`<DeleteButton /> generateToolTipText() Returns the correct statement if deleting is enabled 1`] = `
<span>
  Click to delete snippet
</span>
`;

exports[`<DeleteButton /> generateToolTipText() Returns the correct statement if deleting is not enabled 1`] = `
<span>
  You can only delete snippets
  <br />
  that you own
</span>
`;

exports[`<DeleteButton /> matches snapshot of when the app is in read-only mode 1`] = `
<span
  style={
    Object {
      "height": "48px",
    }
  }>
  <div
    data-for="trash-tip"
    data-tip={true}
    style={
      Object {
        "display": "inline-block",
      }
    }>
    <IconButton
      disableTouchRipple={false}
      disabled={false}
      iconStyle={Object {}}
      id="TrashButton"
      onTouchTap={[Function]}
      style={
        Object {
          "zIndex": 5,
        }
      }
      tooltipPosition="bottom-center"
      touch={false}>
      <ActionDelete />
    </IconButton>
  </div>
  <ReactTooltip
    effect="solid"
    getContent={[Function]}
    id="trash-tip"
    insecure={true}
    place="bottom"
    resizeHide={true}
    wrapper="div" />
</span>
`;

exports[`<DeleteButton /> matches snapshot of when the app is not in read-only mode 1`] = `
<span
  style={
    Object {
      "height": "48px",
    }
  }>
  <div
    data-for="trash-tip"
    data-tip={true}
    style={
      Object {
        "display": "inline-block",
      }
    }>
    <IconButton
      disableTouchRipple={false}
      disabled={true}
      iconStyle={Object {}}
      id="TrashButton"
      onTouchTap={[Function]}
      style={
        Object {
          "zIndex": 5,
        }
      }
      tooltipPosition="bottom-center"
      touch={false}>
      <ActionDelete />
    </IconButton>
  </div>
  <ReactTooltip
    effect="solid"
    getContent={[Function]}
    id="trash-tip"
    insecure={true}
    place="bottom"
    resizeHide={true}
    wrapper="div" />
</span>
`;
